--- a/example/index.html
+++ b/example/index.html
@@ -11,20 +11,16 @@
 <div id='words'></div>
 <div><button id='solve'>Solve Puzzle</button></div>
 
-<script language="javascript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> 
-<script type="text/javascript" src="../src/wordfind.js"></script> 
-<script type="text/javascript" src="scripts/wordfindgame.js"></script> 
+<script language="javascript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="../src/wordfind.js"></script>
+<script type="text/javascript" src="scripts/wordfindgame.js"></script>
 <script>
 
-  var words = ['cows', 'tracks', 'arrived', 'located', 'sir', 'seat',
-               'division', 'effect', 'underline', 'view', 'annual',
-               'anniversary', 'centennial', 'millennium', 'perennial',
-               'artisan', 'apprentice', 'meteorologist', 'blizzard', 'tornado',
-               'intensify','speed','count','consonant','someone',
-               'sail','rolled','bear','wonder','smiled','angle', 'absent',
-               'decadent', 'excellent', 'frequent', 'impatient', 'cell',
-               'cytoplasm', 'organelle', 'diffusion', 'osmosis',
-               'respiration'];
+  var words = ['GAFA', 'NATU', 'BATX', 'Google', 'SNAP', 'CozyCloud',
+             'Samsung', 'effect', 'underline', 'view', 'annual',
+             'anniversary', 'centennial', 'millennium', 'perennial',
+             'artisan'];
+
 
   // start a word find game
   var gamePuzzle = wordfindgame.create(words, '#puzzle', '#words');
@@ -35,8 +31,8 @@
 
   // create just a puzzle, without filling in the blanks and print to console
   var puzzle = wordfind.newPuzzle(
-    words, 
-    {height: 18, width:18, fillBlanks: false}
+    words,
+    {height: 6, width:6, fillBlanks: true}
   );
   wordfind.print(puzzle);
 
