Add instructions and style them

--- a/example/index.html
+++ b/example/index.html
@@ -24,6 +24,10 @@
   <a href="https://cozy.io" title="Visit Cozy Cloud's website"><img src="cozy_io-small.svg" alt="Cozy Cloud Logo" height="65" width="65"></a>
   <h1>Find the GAFA-NATU-BATX</h1>
 </div>
+<div id="instructions">
+  <p>Find all the companies and their acronyms. Words can be found from left to right, right to left,
+    top to bottom, bottom-up and in diagonal in every direction. Happy game!</p>
+</div>
 <div id='puzzle'></div>
 <div id='words'></div>
 <div><button id='solve'>Please find the words for me</button></div>
@@ -33,10 +37,9 @@
 <script type="text/javascript" src="scripts/wordfindgame.js"></script>
 <script>
 
-  var words = ['GAFA', 'NATU', 'BATX', 'Google', 'SNAP', 'CozyCloud',
-             'Samsung', 'effect', 'underline', 'view', 'annual',
-             'anniversary', 'centennial', 'millennium', 'perennial',
-             'artisan'];
+  var words = ['GAFA', 'NATU', 'BATX', 'Google', 'Apple', 'Facebook',
+             'Amazon', 'Netflix', 'Airbnb', 'Tesla', 'Uber', 'Baidu',
+             'Alibaba', 'Tencent', 'Xiaomi', 'Microsoft', 'Samsung'];
 
 
   // start a word find game
