Change path for wordfind.js & color in css

--- a/example/index.html
+++ b/example/index.html
@@ -12,7 +12,7 @@
 <div><button id='solve'>Solve Puzzle</button></div>
 
 <script language="javascript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script type="text/javascript" src="../src/wordfind.js"></script>
+<script type="text/javascript" src="scripts/wordfind.js"></script>
 <script type="text/javascript" src="scripts/wordfindgame.js"></script>
 <script>
 
